[package]
name = "web-feature"
version = "0.1.12"
authors = ["Konstantin Malanchev <hombit@gmail.com>"]
edition = "2018"

[profile.release]
lto = true

[dependencies]
lazy_static = "^1.4.0"
rocket = "^0.4.5"
unzip3 = "1"

[dependencies.light-curve-feature]
version = "0.1.12"
default-features = false
features = ["fftw-source"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.rocket_contrib]
version = "^0.4.5"
default-features = false
features = ["json"]
