[package]
name = "web-feature"
version = "2022.5.1"
authors = ["Konstantin Malanchev <hombit@gmail.com>"]
edition = "2018"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
lazy_static = "^1.4.0"
ndarray = "0.15.4"
unzip3 = "1"

[dependencies.light-curve-feature-0-1]
package = "light-curve-feature"
version = "=0.1.17"
default-features = false
features = ["fftw-source"]

[dependencies.light-curve-feature-0-2]
package = "light-curve-feature"
version = "=0.2.2"
default-features = false
features = ["fftw-source"]

[dependencies.light-curve-feature-0-4]
package = "light-curve-feature"
version = "=0.4.5"
default-features = false
features = ["fftw-source"]

[dependencies.rocket]
version = "^0.5.0-rc.2"
default-features = false
features = ["json"]

[dependencies.serde]
version = "1"
features = ["derive"]
